Add History chart
